# onwards

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.onwards-test  LICENSE  README.md
.github/workflows/: autolabel.yaml  compliance.yaml  docs.yaml  main.yaml  release-plz.yaml  release.yaml
.superpowers/sdd/: task-1-report.md
crates/model-switcher/: Cargo.toml  Dockerfile
crates/model-switcher/examples/: test_config.json
crates/model-switcher/src/: config.rs  lib.rs  main.rs  middleware.rs  orchestrator.rs  switcher.rs
crates/model-switcher/tests/: integration_test.rs
crates/onwards/: Cargo.toml
crates/onwards/src/: client.rs  models.rs  sse.rs
crates/onwards/src/model_switcher/: callbacks.rs  policy.rs
docs/: MODEL_SESSION_AFFINITY_DESIGN.md  OPEN_RESPONSES_INTEGRATION_PLAN.md  book.toml
docs/plans/: 2026-02-13-trusted-targets-design.md  2026-02-13-trusted-targets-implementation.md  2026-02-20-trusted-provider-level-design.md  2026-02-20-trusted-provider-level.md
docs/src/: SUMMARY.md  api-usage.md  authentication.md  cli.md  concurrency.md  configuration.md  contributing.md  introduction.md  load-balancing.md  quickstart.md  rate-limiting.md  response-headers.md  sanitization.md  session-affinity.md  strict-mode.md  upstream-auth.md
docs/superpowers/plans/: 2026-07-13-stream-continuation.md  2026-07-14-absolute-reasoning-budget-validation.md
docs/superpowers/specs/: 2026-07-13-stream-continuation-design.md  2026-07-14-absolute-reasoning-budget-validation-design.md
examples/: script_tools.rs  tool-calling-config.json
examples/tools/: calculate.sh  convert_temperature.sh  echo.sh  get_weather.sh  lookup_city.sh
model-switcher/: config.example.json
model-switcher/src/: config.rs  lib.rs  middleware.rs  orchestrator.rs  policy.rs  switcher.rs
model-switcher/tests/: integration_test.rs
onwards/src/: config.rs  lib.rs  main.rs
onwards/src/model_switcher/: vllm.rs
src/: auth.rs  cache.rs  cache_usage.rs  client.rs  config.rs  errors.rs  handlers.rs  lib.rs  load_balancer.rs  main.rs  models.rs  reasoning.rs  response_id.rs  response_loop.rs  response_loop_tests.rs  response_sanitizer.rs  routes.rs  sse.rs  state.rs  stream_continuation.rs  streaming.rs  target.rs  telemetry.rs
src/model_switcher/: mod.rs  switcher.rs  vllm.rs
src/session_affinity/: context.rs  key.rs  metrics.rs  mod.rs  store.rs
src/strict/: adapter.rs  handlers.rs  mod.rs  streaming.rs
src/strict/schemas/: chat_completions.rs  completions.rs  embeddings.rs  mod.rs  responses.rs  utils.rs
src/traits/: mod.rs  multi_step_store.rs  response_store.rs  step_executor.rs  tool_executor.rs
tests/: integration_tests.rs
