[package]
name = "onwards"
version = "0.6.1"
edition = "2024"
rust-version = "1.88.0"
description = "A flexible LLM proxy library"
license = "MIT"
repository = "https://github.com/doublewordai/onwards"
homepage = "https://github.com/doublewordai/onwards"
keywords = ["llm", "proxy", "ai", "openai", "anthropic"]
categories = ["web-programming", "api-bindings"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1.88"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
dashmap = "6.1.0"
futures-util = "0.3"
hyper = "1.0"
hyper-util = { version = "0.1.0", features = [
  "client",
  "client-legacy",
  "http1",
  "tokio",
] }
hyper-tls = "0.6.0"
notify = "8.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "fs",
  "sync",
  "time",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
bon = "3.6.5"
subtle = "2.6.1"
axum-prometheus = "0.8.0"
governor = "0.10.1"

[dev-dependencies]
axum-test = "17.3.0"
futures-util = "0.3"
rstest = "0.26.1"
