[workspace]
resolver = "2"
members = ["crates/onwards", "crates/model-switcher"]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/doublewordai/onwards"

[workspace.dependencies]
# Shared dependencies across workspace
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1.88"
axum = "0.8.4"
bytes = "1.10"
clap = { version = "4.5.40", features = ["derive", "env"] }
dashmap = "6.1.0"
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.3"
hyper = "1.0"
hyper-util = { version = "0.1.0", features = ["client", "client-legacy", "http1", "tokio"] }
hyper-tls = "0.6.0"
notify = "8.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "time", "process"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }

# Internal crates
onwards = { path = "crates/onwards" }
