[package]
name = "onwards"
version = "0.35.4"
edition = "2024"
rust-version = "1.88.0"
description = "A flexible LLM proxy library"
license = "MIT"
repository = "https://github.com/doublewordai/onwards"
homepage = "https://github.com/doublewordai/onwards"
documentation = "https://docs.rs/onwards"
keywords = ["llm", "proxy", "ai", "openai", "anthropic"]
categories = ["web-programming", "api-bindings"]

[features]
default = []
# Enables the multi-step Open Responses orchestration loop, the
# `MultiStepStore` trait, and the `streaming` event-sink machinery.
# Pulls in `fusillade` for `HttpClient` / `RequestData` / `StreamEvent`
# so per-step HTTP fires get fusillade's row-id header stamping +
# reassembly machinery for free. Off by default — the simple
# `/ai/v1/*` proxy path doesn't need any of it.
multi-step = ["dep:fusillade"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-stream = "0.3"
async-trait = "0.1.88"
brotli = "8"
bytes = "1.10"
eventsource-stream = "0.2"
openai-reassembler = "0.3"
axum = "0.8.4"
flate2 = "1"
clap = { version = "4.5.40", features = ["derive", "env"] }
dashmap = "6.1.0"
futures-util = "0.3"
hyper = "1.0"
hyper-util = { version = "0.1.0", features = [
  "client",
  "client-legacy",
  "http1",
  "http2",
  "tokio",
] }
http-body-util = "0.1.3"
hyper-tls = "0.6.0"
notify = "8.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "fs",
  "sync",
  "time",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
url = { version = "2.5", features = ["serde"] }
bon = "3.6.5"
subtle = "2.6.1"
axum-prometheus = "0.10.0"
metrics = "0.24"
governor = "0.10.1"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
fusillade = { version = "23.0.1", optional = true }

[dev-dependencies]
axum-test = "18.0.0"
futures-util = "0.3"
rstest = "0.26.1"
tower = "0.5"
wiremock = "0.6"
