[package]
name = "onwards"
version = "0.11.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A flexible LLM proxy library"
homepage = "https://github.com/doublewordai/onwards"
documentation = "https://docs.rs/onwards"
keywords = ["llm", "proxy", "ai", "openai", "anthropic"]
categories = ["web-programming", "api-bindings"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-tls.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
bon = "3.6.5"
subtle = "2.6.1"
axum-prometheus = "0.10.0"
governor = "0.10.1"
rand = "0.9"

[dev-dependencies]
axum-test = "18.0.0"
futures-util.workspace = true
rstest = "0.26.1"
